tests/error/override_static.gw
// [contains] but cannot override
class C
{
	static fun  void test() {}
}

class D extends C
{
	function void test() {}
}
